[gd_scene load_steps=24 format=3 uid="uid://d3wglp2hfhnjx"]

[ext_resource type="Script" path="res://tutorial.gd" id="1_ovobt"]
[ext_resource type="Texture2D" uid="uid://b1s0mvek3nqnp" path="res://assetss/platform_black.png" id="1_sfbse"]
[ext_resource type="Script" path="res://canvas_layer.gd" id="2_7waqp"]
[ext_resource type="PackedScene" uid="uid://e3xjoir8f4lx" path="res://Player_2.tscn" id="2_lmgqd"]
[ext_resource type="Script" path="res://Player_2.gd" id="3_qsg8l"]
[ext_resource type="Texture2D" uid="uid://pro7mk8qh63c" path="res://assetss/platform_default.png" id="6_fflxg"]
[ext_resource type="PackedScene" uid="uid://c5clromjmgu7k" path="res://Player.tscn" id="7_rascw"]
[ext_resource type="Texture2D" uid="uid://d2hroabycxi1b" path="res://assetss/b_blue_background.png" id="9_nkr0w"]
[ext_resource type="Script" path="res://camera_2d.gd" id="10_uxkm1"]
[ext_resource type="Script" path="res://lever.gd" id="11_8fuil"]
[ext_resource type="PackedScene" uid="uid://b5yt3hx1d755d" path="res://door.tscn" id="11_f8qhb"]
[ext_resource type="PackedScene" uid="uid://b5vgwybaq7m8y" path="res://lever.tscn" id="11_iljyf"]
[ext_resource type="Script" path="res://door.gd" id="12_csgek"]
[ext_resource type="PackedScene" uid="uid://d1mnmdi7etqdl" path="res://lever_2.tscn" id="12_i8h3d"]
[ext_resource type="PackedScene" uid="uid://cr0fd3esxoj37" path="res://Enemy.tscn" id="13_1ugd1"]
[ext_resource type="Script" path="res://lever_2.gd" id="13_xje0g"]
[ext_resource type="PackedScene" uid="uid://3owvf6hs2mjy" path="res://GrappleObject.tscn" id="14_twgi5"]
[ext_resource type="PackedScene" uid="uid://c0vq62cpu4hfd" path="res://platform.tscn" id="17_hcyoj"]
[ext_resource type="Script" path="res://platform.gd" id="18_85kwd"]
[ext_resource type="PackedScene" uid="uid://oqr5yrw0b0kp" path="res://heart.tscn" id="19_2yqq5"]
[ext_resource type="PackedScene" uid="uid://dijucyr1vobi3" path="res://instructions.tscn" id="21_yt2wf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cr3bn"]
size = Vector2(977.5, 211.484)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8gtm"]
size = Vector2(74, 45.25)

[node name="tutorial" type="Node2D"]
script = ExtResource("1_ovobt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_7waqp")

[node name="heart" parent="CanvasLayer" instance=ExtResource("19_2yqq5")]
position = Vector2(-230, -169)

[node name="heart2" parent="CanvasLayer" instance=ExtResource("19_2yqq5")]
position = Vector2(-109, -169)

[node name="heart3" parent="CanvasLayer" instance=ExtResource("19_2yqq5")]
position = Vector2(14, -170)

[node name="Player2" parent="." groups=["player"] instance=ExtResource("2_lmgqd")]
position = Vector2(1604, -18)
script = ExtResource("3_qsg8l")

[node name="Area2D" type="CharacterBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(95, 265.5)
scale = Vector2(0.764063, 0.160156)
texture = ExtResource("1_sfbse")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(91, 271)
shape = SubResource("RectangleShape2D_cr3bn")

[node name="Area2D3" type="CharacterBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D3"]
position = Vector2(1416, 290)
scale = Vector2(0.775977, 0.186719)
texture = ExtResource("1_sfbse")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(1409, 275)
shape = SubResource("RectangleShape2D_cr3bn")

[node name="platform1" type="CharacterBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="platform1"]
position = Vector2(559, -68)
scale = Vector2(0.034375, 0.0230469)
texture = ExtResource("6_fflxg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform1"]
position = Vector2(559, -71)
shape = SubResource("RectangleShape2D_a8gtm")

[node name="platform2" type="CharacterBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="platform2"]
position = Vector2(1284, 2)
scale = Vector2(0.0593749, 0.0359375)
texture = ExtResource("6_fflxg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform2"]
position = Vector2(1284, 4)
shape = SubResource("RectangleShape2D_a8gtm")

[node name="Player" parent="." groups=["player"] instance=ExtResource("7_rascw")]
position = Vector2(-216, 53)

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("player1", "player2")]
script = ExtResource("10_uxkm1")
player1 = NodePath("../Player")
player2 = NodePath("../Player2")

[node name="lever" parent="." instance=ExtResource("11_iljyf")]
position = Vector2(557, -44)
script = ExtResource("11_8fuil")

[node name="Door" parent="." instance=ExtResource("11_f8qhb")]
position = Vector2(229, 109)
script = ExtResource("12_csgek")

[node name="lever2" parent="." instance=ExtResource("12_i8h3d")]
position = Vector2(1283, -28)
script = ExtResource("13_xje0g")

[node name="Enemy" parent="." groups=["enemy"] instance=ExtResource("13_1ugd1")]
position = Vector2(696, 83)

[node name="Timer" type="Timer" parent="Enemy"]
autostart = true

[node name="GrappleObject" parent="." groups=["grabbable", "rock"] instance=ExtResource("14_twgi5")]
position = Vector2(1121, -119)

[node name="platform" parent="." instance=ExtResource("17_hcyoj")]
position = Vector2(756, 435)
script = ExtResource("18_85kwd")

[node name="RestartLabel" type="Label" parent="."]
offset_left = -165.0
offset_top = -78.0
offset_right = 48.0
offset_bottom = -19.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 53
text = "Restart Game"
horizontal_alignment = 1

[node name="InstructionCanvasLayer" parent="." instance=ExtResource("21_yt2wf")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-724, -60)
scale = Vector2(1.63393, 1.10645)
texture = ExtResource("9_nkr0w")
centered = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="instruction1" type="Label" parent="Control"]
layout_mode = 0
offset_right = 184.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Use v to change camera"

[node name="instruction2" type="Label" parent="Control"]
layout_mode = 0
offset_right = 462.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Use right click to grab object and move it on top of the lever"

[node name="instruction3" type="Label" parent="Control"]
layout_mode = 0
offset_right = 272.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Use v to go back to the first player! "

[node name="instruction4" type="Label" parent="Control"]
layout_mode = 0
offset_right = 122.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Shoot the lever!"

[node name="instruction5" type="Label" parent="Control"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Shoot the enemy! Come into contact with each other!"

[connection signal="restart" from="CanvasLayer" to="." method="_on_canvas_layer_restart"]
[connection signal="platform_raised" from="lever" to="." method="_on_lever_platform_raised"]
[connection signal="platform_raised" from="lever" to="platform" method="_on_lever_platform_raised"]
[connection signal="lever_activated" from="lever2" to="." method="_on_lever_2_lever_activated"]
[connection signal="lever_activated" from="lever2" to="Door" method="_on_lever_2_lever_activated"]
[connection signal="health_deducted" from="Enemy" to="CanvasLayer" method="_on_enemy_health_deducted"]
[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_timer_timeout"]
